Salesforce/TrailheadRepo/misc/BigObjects/Rider_History/objects/Rider_History__b.object
<CustomObject>
    <fields>
        <fullName>Start_Location_Lat__c</fullName>
        <label>Start Location Latitude</label>
        <type>Number</type>
		<scale>4</scale>
        <precision>7</precision>
    </fields>
    <fields>
        <fullName>Start_Location_Long__c</fullName>
        <label>Start Location Longitude</label>
        <type>Number</type>
		<scale>4</scale>
        <precision>7</precision>
    </fields>    
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>  	
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>  	
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <length>16</length>
        <type>Text</type>
    </fields>  	
    <fields>
        <fullName>Rider_Account__c</fullName>
        <label>Rider Account</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>  	
    <fields>
        <fullName>Rider_Rating__c</fullName>
        <label>Rider Rating</label>
        <type>Number</type>
		<scale>1</scale>
        <precision>2</precision>
    </fields>  	

    <indexes>
        <fullName>Rider_History_Index</fullName>
        <label>Rider History Index</label>
        <fields>
            <name>Rider_Account__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
        <fields>
            <name>Start_Time__c</name>
            <sortDirection>DESC</sortDirection>
        </fields>
    </indexes>
    
    <label>Rider History</label>
    <pluralLabel>Rider History</pluralLabel>
</CustomObject>